# live-coding

./: .gitignore  README.md  RESEARCH.md  learn2code.js  main.js  package-lock.json  package.json
.github/workflows/: main.yml
compiler/: .gitignore  Dockerfile  README.md  compiler-test.js  compiler.js  config.json  create-compiler-dir.sh  echo.pl  index.js  index.test.js  live-compiler.pl  package-lock.json  package.json  start.sh  stop.sh  test.js  test.pl
compiler/clientenvironments/: README.md
conf/: codingskills.profile.neo  codingskills.profile.vmacman  config.json.dev  config.json.neo  config.json.vmacman
doc/: README.md  TODO.md
docs/design/: index.html  studentspace.html  teacherspace.html
htdocs/: ace  bootstrap  confetti  index.html  teacher.html  teacherspace.html
htdocs/js/: jquery.min.js  workspace.js
htdocs/learn2code/: ace  index.html  login.css  popper  style.css  teacher.html  teacherspace.html  tryout.html  workspace-full.html  workspace-new.html  workspace-normal.html  workspace.html
htdocs/learn2code/js/: jquery.min.js  workspace.js
htdocs/public/: bootstrap  confetti  index.html  teacher.html  teacherspace.html  workspace.html
htdocs/public/js/: workspace.js
websocket/: forever-example.txt  websocket.js
websocket-new/: package-lock.json  package.json  websocket.js
websocket/docs/: install.txt
websocket/htdocs/: websocket.js  workspace.html
websocket/include/: RemoteServer.h  WebSocketMessage.h  WebSocketProtocol.h  WebSocketProtocol.h~  config.h
websocket/include/WebSocketMessage/: Workspace.h
websocket/include/WebSocketProtocol/: Display.h  Echo.h  Prog.h  Prog.h~  Workspace.h  WorkspaceJava.h
websocket/include/sws/: server_ws.hpp
websocket/src/: CMakeLists.txt  websocket.cpp  wsclient.cpp
websocket/src/include/: RemoteServer.cpp  WebSocketMessage.cpp  WebSocketProtocol.cpp  WebSocketProtocol.cpp~
websocket/src/include/WebSocketMessage/: Workspace.cpp
websocket/src/include/WebSocketProtocol/: Display.cpp  Echo.cpp  Echo.cpp~  Prog.cpp~  Workspace.cpp  WorkspaceJava.cpp
